--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false" >Refresh</string>
     <string name="title_activity_detail">Forecast Details</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <string name="pref_location_key" translatable="false">location</string>
+
+    <!-- Label for the Location preference [CHAR_LIMIT=30]-->
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_default" translatable="false">Rehovot,IL</string>
 </resources>
