--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh" translatable="false" >Refresh</string>
     <string name="title_activity_detail">Forecast Details</string>
+    <string name="pref_location_key">location</string>
+    <string name="pref_location_label">Location</string>
+    <string name="pref_location_default">Rehovot,IL</string>
 </resources>
