--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,10 @@
     <!-- Label for the Location preference [CHAR_LIMIT=30]-->
     <string name="pref_location_label">Location</string>
     <string name="pref_location_default" translatable="false">Rehovot,IL</string>
+
+    <string name="pref_units_metric">Metric</string>
+    <string name="pref_units_imperial">Imperial</string>
+    <string name="pref_units_key">units</string>
+    <string name="pref_units_label">Temperature Units</string>
+    <string name="pref_units_default">@string/pref_units_metric</string>
 </resources>
