--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,7 @@
     <!-- Label for the Location preference [CHAR_LIMIT=30]-->
     <string name="pref_units_label">Temperature Units</string>
     <string name="action_map">Map Location</string>
+    <string name="action_share">Share Weather</string>
+    <string name="action_provider_class">android.support.v7.widget.ShareActionProvider</string>
 
 </resources>
