--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,7 +41,29 @@
     </string>
 
     <!-- Temperature formats -->
+    <!-- Wind in mph [CHAR LIMIT=10] -->
     <string name="format_temperature">
         <xliff:g id="temp">%1.0f</xliff:g>\u00B0<xliff:g id="temp_units">%2$s</xliff:g>
+    </string>
+
+    <!-- Windspeed formats -->
+    <!-- Wind in mph [CHAR LIMIT=25] -->
+    <string name="format_wind_mph">
+        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
+    </string>
+
+    <!-- Wind in kph [CHAR LIMIT=25] -->
+    <string name="format_wind_kmh">
+        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
+    </string>
+
+    <!-- Pressure format CHAR LIMIT=25] -->
+    <string name="format_pressure">
+        Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa
+    </string>
+
+    <!-- Humidity format CHAR LIMIT=25]-->
+    <string name="format_humidity">
+        Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%
     </string>
 </resources>
